substrate/frame/support/test/tests/derive_no_bound_ui/default_no_attribute.stderr
error: no default declared, make a variant default by placing `#[default]` above it
  --> tests/derive_no_bound_ui/default_no_attribute.rs:23:6
   |
23 | enum Foo<T: Config> {
   |      ^^^
